Use "white-space: nowrap" for table rows to make sure it will not wrap to the next line

--- a/src/table.styl
+++ b/src/table.styl
@@ -82,6 +82,18 @@
     }
 }
 
+.table-auto-fit {
+    .table {
+        > .thead,
+        > .tbody,
+        > .tfoot {
+            > .tr {
+                white-space: nowrap;
+            }
+        }
+    }
+}
+
 .tr-expand {
     border-bottom: 1px solid $table-border-color;
     white-space: normal;
